kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: najemniski-sos-deployment
  labels:
    app: najemniski-sos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: najemniski-sos
  template:
    metadata:
      labels:
        app: najemniski-sos
    spec:
      securityContext:
        fsGroup: 1000
      volumes:
        - name: najemniski-sos-storage
          emptyDir: {}
      containers:
        - name: najemniski-sos
          image: najemniski-sos
          volumeMounts:
            - name: najemniski-sos-storage
              mountPath: /storage
          command:
            - gunicorn
            - stanovanja.wsgi:application
            - -b
            - 0.0.0.0:8000
            - --log-level
            - DEBUG
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: 200Mi
              cpu: 100m
            limits:
              memory: 200Mi
              cpu: 100m
        - name: najemniski-sos-nginx
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          image: nginx:alpine
          volumeMounts:
            - name: najemniski-sos-storage
              mountPath: /usr/share/nginx/html
          resources:
            requests:
              memory: 50Mi
              cpu: 50m
            limits:
              memory: 50Mi
              cpu: 50m
