kustomize/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: najemniski-sos
  labels:
    app: najemniski-sos
spec:
  serviceName: najemniski-sos
  replicas: 1
  selector:
    matchLabels:
      app: najemniski-sos
  template:
    metadata:
      labels:
        app: najemniski-sos
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - name: najemniski-sos
        image: najemniski-sos # kustomize thing
        volumeMounts:
        - name: najemniski-sos-persistent-storage
          mountPath: /pvc
        command:
          - gunicorn
          - stanovanja.wsgi:application
          - -b
          - 0.0.0.0:8000
          - --log-level
          - DEBUG
        resources:
          requests:
            memory: 500Mi
            cpu: 500m
          limits:
            memory: 500Mi
            cpu: 500m
        ports:
        - name: http
          containerPort: 8000
          protocol: TCP
        livenessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 10
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 15
          periodSeconds: 30
          timeoutSeconds: 5
      - name: najemniski-sos-nginx
        ports:
          - name: http
            containerPort: 80
            protocol: TCP
        image: nginx:alpine
        volumeMounts:
          - name: najemniski-sos-persistent-storage
            mountPath: /usr/share/nginx/html
        resources:
          requests:
            memory: 200Mi
            cpu: 50m
          limits:
            memory: 200Mi
            cpu: 50m
  volumeClaimTemplates:
  - metadata:
      name: najemniski-sos-persistent-storage
      annotations:
          pv.beta.kubernetes.io/gid: "1000"
    spec:
      storageClassName: 'scw-bssd-retain'
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 2Gi
