kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: najemniski-sos
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - najemniski-sos.si
        - www.najemniski-sos.si
      secretName: najemniski-sos-tls
  rules:
    - host: najemniski-sos.si
      http: &http_paths
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: najemniski-sos
                port:
                  number: 8000
    - host: www.najemniski-sos.si
      http: *http_paths
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: najemniski-sos-nginx
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - files.najemniski-sos.si
      secretName: najemniski-sos-nginx-tls
  rules:
    - host: files.najemniski-sos.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: najemniski-sos-nginx
                port:
                  number: 80
